finding out the username who has report more issues

--- a/rails_issues_analysis.ipynb
+++ b/rails_issues_analysis.ipynb
@@ -965,11 +965,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 4.3. Is there anyone who reports more issues than others?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username:  seanpdoyle  has the most issues with  28  issues\n"
+     ]
+    }
+   ],
+   "source": [
+    "username_with_max_issues = df.groupby('login').size().idxmax()\n",
+    "print(\"Username: \", username_with_max_issues, \" has the most issues with \", df.groupby('login').size().max(), \" issues\")\n"
+   ]
   },
   {
    "cell_type": "code",
