finding out the most popular label

--- a/rails_issues_analysis.ipynb
+++ b/rails_issues_analysis.ipynb
@@ -990,11 +990,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 4.4. What is the most popular category (label)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most popular label is: activerecord\n",
+      "Its frequency is: 233\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenate all the label columns into a single Series\n",
+    "labels = pd.concat([df['label_0'], df['label_1'], df['label_2'], df['label_3'], df['label_4'], df['label_5'], df['label_6'], df['label_7'], df['label_8']])\n",
+    "\n",
+    "# Find the frequency of each label\n",
+    "label_counts = labels.value_counts()\n",
+    "\n",
+    "# Find the most popular label\n",
+    "most_popular_label = label_counts.idxmax()\n",
+    "\n",
+    "# Find the frequency of the most popular label\n",
+    "most_popular_label_frequency = label_counts.loc[most_popular_label]\n",
+    "\n",
+    "print(\"The most popular label is:\", most_popular_label)\n",
+    "print(\"Its frequency is:\", most_popular_label_frequency)\n"
+   ]
   },
   {
    "cell_type": "markdown",
