added huggingface model for label prediction for the issues

--- a/rails_issues_analysis.ipynb
+++ b/rails_issues_analysis.ipynb
@@ -16,14 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "from json import loads\n",
+    "\n",
     "import requests\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification"
    ]
   },
   {
@@ -1091,17 +1095,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## load the DataFrame from the csv file\n",
+    "file_path = \"github-issues.csv\"\n",
+    "df = pd.read_csv(file_path)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## load the model from the huggingface model hub\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"Rami/multi-label-class-classification-on-github-issues\")\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"Rami/multi-label-class-classification-on-github-issues\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Description: <!--\n",
+      "Thanks for contributing to Rails!\n",
+      "\n",
+      "Please do not make *Draft* pull requests, as they still send\n",
+      "notifications to everyone watching the Rails repo.\n",
+      "\n",
+      "Create a pull request when it is ready for review and feedback\n",
+      "from the Rails team :).\n",
+      "\n",
+      "If your pull request affects documentation or any non-code\n",
+      "changes, guidelines for those changes are [available\n",
+      "here](https://edgeguides.rubyonrails.org/contributing_to_ruby_on_rails.html#contributing-to-the-rails-documentation)\n",
+      "\n",
+      "About this template\n",
+      "\n",
+      "The following template aims to help contributors write a good description for their pull requests.\n",
+      "We'd like you to provide a description of the changes in your pull request (i.e. bugs fixed or features added), motivation behind the changes, and complete the checklist below before opening a pull request.\n",
+      "\n",
+      "Feel free to discard it if you need to (e.g. when you just fix a typo). -->\n",
+      "\n",
+      "### Motivation / Background\n",
+      "\n",
+      "<!--\n",
+      "Describe why this Pull Request needs to be merged. What bug have you fixed? What feature have you added? Why is it important?\n",
+      "If you are fixing a specific issue, include \"Fixes #ISSUE\" (replace with the issue number, remove the quotes) and the issue will be linked to this PR.\n",
+      "-->\n",
+      "\n",
+      "Using `ActiveModel::Model` is [very useful to create form objects](https://thoughtbot.com/blog/activemodel-form-objects) that have custom logic, while still preserving the Rails-way of building models, controllers, and views.\n",
+      "\n",
+      "They can be very handy to save multiple objects at once, for example. The problem is that there's not a good way to validate the associated objects. While Active Record has a `AssociatedValidator`, ActiveModel lacks one, so have to manually write validations like:\n",
+      "\n",
+      "```rb\n",
+      "class Registration\n",
+      "  attr_accessor :account, :profile\n",
+      "  validate :account_is_valid\n",
+      "  validate :profile_is_valid\n",
+      "\n",
+      "  def save!\n",
+      "    if valid?\n",
+      "      # save objects\n",
+      "    end\n",
+      "  end\n",
+      "\n",
+      "  private\n",
+      "\n",
+      "  def account_is_valid\n",
+      "    errors.add(:account, \"is invalid\") if account.invalid?\n",
+      "  end\n",
+      "\n",
+      "  def profile_is_valid\n",
+      "    errors.add(:profile, \"is invalid\") if profile.invalid?\n",
+      "  end\n",
+      "end\n",
+      "```\n",
+      "\n",
+      "### Detail\n",
+      "\n",
+      "This PR adds an `ActiveModel::Validations::ModelValidator` validator, which is similar to the `ActiveRecord::Validations::AssociatedValidator` but doesn't require the associated object to be an `ActiveRecord` object.\n",
+      "\n",
+      "The example above could be rewritten as:\n",
+      "\n",
+      "```rb\n",
+      "class Registration\n",
+      "  attr_accessor :account, :profile\n",
+      "  validates_model :account, :profile\n",
+      "\n",
+      "  def save!\n",
+      "    if valid?\n",
+      "      # save objects\n",
+      "    end\n",
+      "  end\n",
+      "end\n",
+      "```\n",
+      "### Checklist\n",
+      "\n",
+      "Before submitting the PR make sure the following are checked:\n",
+      "\n",
+      "* [x] This Pull Request is related to one change. Changes that are unrelated should be opened in separate PRs.\n",
+      "* [x] Commit message has a detailed description of what changed and why. If this PR fixes a related issue include it in the commit message. Ex: `[Fix #issue-number]`\n",
+      "* [x] Tests are added or updated if you fix a bug or add a feature.\n",
+      "* [x] CHANGELOG files are updated for the changed libraries if there is a behavior change or additional feature. Minor bug fixes and documentation changes should not be included.\n",
+      "\n",
+      "**************************\n",
+      "Original Labels: ['activemodel', 'activerecord', 'needs work']\n",
+      "Predicted Label: feature\n",
+      "**************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "## generate random index to select a random issue\n",
+    "random_index = random.randint(0, len(df)-1)\n",
+    "\n",
+    "## get the description for the random issue\n",
+    "description = df.iloc[random_index]['body']\n",
+    "\n",
+    "## get the original labels\n",
+    "orignal_label = df.iloc[random_index]['label_0'], df.iloc[random_index]['label_1'], df.iloc[random_index]['label_2'], df.iloc[random_index]['label_3'], df.iloc[random_index]['label_4'], df.iloc[random_index]['label_5'], df.iloc[random_index]['label_6'], df.iloc[random_index]['label_7'], df.iloc[random_index]['label_8']\n",
+    "orignal_label = [label for label in orignal_label if pd.notna(label) and label != \"None\"]\n",
+    "\n",
+    "## tokenize the title and description\n",
+    "inputs = tokenizer(description, return_tensors=\"pt\", padding=True)\n",
+    "\n",
+    "\n",
+    "## resize the input tensors to 512 tokens\n",
+    "inputs = {name: tensor[:, :512] for name, tensor in inputs.items()}\n",
+    "\n",
+    "## make a prediction\n",
+    "with torch.no_grad():\n",
+    "    logits = model(**inputs).logits\n",
+    "    \n",
+    "## get the predicted labels\n",
+    "predicted_ids = logits.argmax().item()\n",
+    "predicted_label = model.config.id2label[predicted_ids]\n",
+    "\n",
+    "print(\"Description:\", description)\n",
+    "print(\"**************************\")\n",
+    "print(\"Original Labels:\", orignal_label)\n",
+    "print(\"Predicted Label:\", predicted_label)\n",
+    "print(\"**************************\")"
+   ]
   },
   {
    "cell_type": "markdown",
