code refactored and additional context is added

--- a/rails_issues_analysis.ipynb
+++ b/rails_issues_analysis.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is scrapped from the official Ruby on Rails repository on GitHub using the GitHub API. However, there is an issue with the current code, it only scrapes the open-issues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -48,7 +55,7 @@
     "with open(file_path, \"r\") as file:\n",
     "    data = file.read()\n",
     "    if data:\n",
-    "        data = loads(data)\n"
+    "        data = loads(data)"
    ]
   },
   {
@@ -93,6 +100,13 @@
    "metadata": {},
    "source": [
     "### 3. Data Cleaning and Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, I have selected the latest 500 issues, then I have filtered only the selected values. There are some multi-values keys, so I have to split them into separate columns, and only filter the required columns from them as well. At the end, I have converted the data into a pandas dataframe, process it and saved it as a CSV file."
    ]
   },
   {
@@ -768,6 +782,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This sections answer the four questions:\n",
+    "- How do the number of issues evolve over time?\n",
+    "- Are there any periods in which we get more issues?\n",
+    "- Is there anyone who reports more issues than others?\n",
+    "- What is the most popular category (label)? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -776,6 +801,29 @@
     "## load the DataFrame from the csv file\n",
     "file_path = \"github-issues.csv\"\n",
     "df = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "open    500\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## all the issues in the dataframe are open issues\n",
+    "df['state'].value_counts()"
    ]
   },
   {
@@ -834,6 +882,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The general trend is that the number of issues is increasing over time. However, there are some periods where the number of issues is decreasing such as December 2023 and in the middle weeks of January 2024."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 4.2. Are there any periods in which we get more issues?"
    ]
   },
@@ -867,6 +922,13 @@
     "plt.title('Number of Issues Created on Each Day of the Week')\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above graphs shows, the number of issues over weekly days. It is clear that the number of issues is higher on Friday and least on the weekends."
    ]
   },
   {
@@ -916,6 +978,13 @@
     "# Print the weeks with the highest issue counts\n",
     "print(\"Weeks with the highest number of issues:\")\n",
     "print(max_issue_weeks)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above graphs shows the number of issues over time. It is clear that the number of issues is increasing over time. One reason for that could be, that the old issues are being resolved and new issues are being reported recently and are not resolved yet. This is why during the last few weeks, the number of issues is the most in the graph. While, also, there is a spikes in the Novemner 2023 and January 2024."
    ]
   },
   {
@@ -1245,27 +1314,6 @@
     "print(\"Predicted Label:\", predicted_label)\n",
     "print(\"**************************\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 6. Conclusion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
